@@ -1,0 +1,13 @@
+Import('env')
+
+env.Prepend(LIBS = 'gsensitivity')
+
+sources = Split("""
+	gHit.cc
+    gTouchable.cc
+    gSensitiveDetector.cc
+	""")
+
+env.Library(source = sources, target = "#lib/gsensitivity")
+
+
