@@ -1,3 +1,6 @@
+7/12/17
+ - added gHit, gSensitiveDetector classes
+
 7/11/17
  - starting gtouchable
 
